[package]
name = "lapack-src"
version = "0.12.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Balasubramanian Narasimhan <b.naras@gmail.com>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Michael Zietz <michael.zietz@gmail.com>",
    "Mitsutoshi Aoe <me@maoe.name>",
    "Stefan Kroboth <stefan.kroboth@gmail.com>",
    "Toshiki Teramura <toshiki.teramura@gmail.com>",
]
description = "The package provides a LAPACK source of choice."
documentation = "https://docs.rs/lapack-src"
homepage = "https://github.com/blas-lapack-rs/lapack-src"
repository = "https://github.com/blas-lapack-rs/lapack-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]

[package.metadata.docs.rs]
changelog = "CHANGELOG.md"

[features]
# apple accelerate
accelerate = ["accelerate-src"]
# intel mkl with different configurations
intel-mkl = ["intel-mkl-static-lp64-seq"]
intel-mkl-static-lp64-iomp   = ["intel-mkl-src/mkl-static-lp64-iomp"]
intel-mkl-static-lp64-seq    = ["intel-mkl-src/mkl-static-lp64-seq"]
intel-mkl-static-ilp64-iomp  = ["intel-mkl-src/mkl-static-ilp64-iomp"]
intel-mkl-static-ilp64-seq   = ["intel-mkl-src/mkl-static-ilp64-seq"]
intel-mkl-dynamic-lp64-iomp  = ["intel-mkl-src/mkl-dynamic-lp64-iomp"]
intel-mkl-dynamic-lp64-seq   = ["intel-mkl-src/mkl-dynamic-lp64-seq"]
intel-mkl-dynamic-ilp64-iomp = ["intel-mkl-src/mkl-dynamic-ilp64-iomp"]
intel-mkl-dynamic-ilp64-seq  = ["intel-mkl-src/mkl-dynamic-ilp64-seq"]
# netlib
netlib = ["netlib-src"]
# openblas
openblas = ["openblas-src"]
# R
r = ["r-src"]

[dependencies.accelerate-src]
version = "0.3"
optional = true

[dependencies.intel-mkl-src]
version = "0.8"
optional = true
default-features = false


[dependencies.netlib-src]
version = "0.8"
optional = true

[dependencies.openblas-src]
version = "0.10"
optional = true

[dependencies.r-src]
version = "0.2.1"
optional = true
