[package]
name = "lapack-src"
version = "0.13.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Balasubramanian Narasimhan <b.naras@gmail.com>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Michael Zietz <michael.zietz@gmail.com>",
    "Mitsutoshi Aoe <me@maoe.name>",
    "Stefan Kroboth <stefan.kroboth@gmail.com>",
    "Toshiki Teramura <toshiki.teramura@gmail.com>",
]
description = "The package provides a LAPACK source of choice."
documentation = "https://docs.rs/lapack-src"
homepage = "https://github.com/blas-lapack-rs/lapack-src"
repository = "https://github.com/blas-lapack-rs/lapack-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]

[package.metadata.docs.rs]
changelog = "CHANGELOG.md"

[features]
accelerate = ["accelerate-src"]
intel-mkl-dynamic-parallel = ["intel-mkl-src/mkl-dynamic-lp64-iomp"]
intel-mkl-dynamic-sequential = ["intel-mkl-src/mkl-dynamic-lp64-seq"]
intel-mkl-static-parallel = ["intel-mkl-src/mkl-static-lp64-iomp"]
intel-mkl-static-sequential = ["intel-mkl-src/mkl-static-lp64-seq"]
netlib = ["netlib-src"]
openblas = ["openblas-src"]
r = ["r-src"]

[dependencies.accelerate-src]
version = "0.3"
optional = true

[dependencies.intel-mkl-src]
version = "0.8"
optional = true

[dependencies.netlib-src]
version = "0.9"
optional = true

[dependencies.openblas-src]
version = "0.10"
optional = true

[dependencies.r-src]
version = "0.2.1"
optional = true
